--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Mike Munoz</h1>
-						<p>PSO Director @Corebts &nbsp;&bull;&nbsp; CCIE 9751 &nbsp;&bull;&nbsp; Lots of certs</p>
+						<p>PSO Director <a href="https://corebts.com">@Corebts</a> &nbsp;&bull;&nbsp; CCIE 9751 &nbsp;&bull;&nbsp; Lots of certs</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/prorouting" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.linkedin.com/in/cciemike/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://medium.com/@mike_munoz" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 								<li><a href="https://github.com/mikemunoz" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="sip://mike.munoz@corebts.com" class="icon brands fa-comments"><span class="label">SIP</span></a></li>
 								<li><a href="mailto:mike@prorouting.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="telnet://towel.blinkenlights.nl" class="icon brands fa-empire"><span class="label">Empire</span></a></li>
 							</ul>
 						</nav>
 					</header>
