--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="https://www.linkedin.com/in/cciemike/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://medium.com/@mike_munoz" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 								<li><a href="https://github.com/mikemunoz" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="sip://mike.munoz@corebts.com" class="icon brands fa-comments"><span class="label">SIP</span></a></li>
+								<li><a href="sip://mike.munoz@corebts.com" class="icon brands fa-comment"><span class="label">SIP</span></a></li>
 								<li><a href="mailto:mike@prorouting.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
