--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 								<li><a href="https://medium.com/@mike_munoz" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 								<li><a href="https://github.com/mikemunoz" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://teams.microsoft.com/l/chat/0/0?users=<mike.munoz@corebts.com>" class="icon brands fa-comments"><span class="label">comments</span></a></li>
+								<li><a href="webexteams://im?email=mike.munoz@corebts.com" class="icon brands fa-comments"><span class="label">comments</span>Contact me in a Webex Teams space</a></li>
 								<li><a href="mailto:mike@prorouting.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
