--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Mike Munoz</h1>
-						<p>PSO Director <a href="https://corebts.com">@Corebts</a> &nbsp;&bull;&nbsp; CCIE 9751 &nbsp;&bull;&nbsp; Lots of certs and management experience.</p>
+						<p>Managing Director at Core BTS | Client Focused | Technical Leadership | CCIE 9751</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/prorouting" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
