--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Mike Munoz. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
 					</footer>
 
 			</div>
