--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<li><a href="https://github.com/mikemunoz" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="webexteams://im?email=mike.munoz@corebts.com" class="far fa-comments"><span class="label">comments</span></a></li>
 								<li><a href="mailto:mike@prorouting.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="https://www.credly.com/users/mike-munoz/badges#" class="fa-light fa-certificate"><span class="label">Certificates</span></a></li>
+								<li><a href="https://www.credly.com/users/mike-munoz/badges#" class="fa-solid fa-certificate"><span class="label">Certificates</span></a></li>
 							</ul>
 						</nav>
 					</header>
