--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Mike Munoz</h1>
-						<p>Managing Director at Core BTS | Client Focused | Technical Leadership | CCIE 9751</p>
+						<p>Working at NetCraftsmen | Client Focused | Technical Leadership | CCIE 9751</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/prorouting" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.linkedin.com/in/cciemike/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/mikemunoz" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="webexteams://im?email=mike.munoz@corebts.com" class="far fa-comments"><span class="label">comments</span></a></li>
+								<li><a href="webexteams://im?email=mmunoz@netcraftsmen.com" class="far fa-comments"><span class="label">comments</span></a></li>
 								<li><a href="mailto:mike@prorouting.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://www.credly.com/users/mike-munoz/badges#" class="fas fa-certificate"><span class="label">Certificates</span></a></li>
 							</ul>
